# technocore.21.geode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mod.json
Resources/: GJ_GameSheet02-hd.plist  GJ_GameSheet02-uhd.plist  GJ_GameSheet02.plist  LevelData.plist  levelCustomizer.json
android/: AndroidManifest.xml  CMakeLists.txt  CreatorLayer.h  GameObjectController.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GeometryJump.smali  InfoLayer.h  LevelTools.h  build.sh  gdsymbols.cpp  hooks.cpp  hooks.h  main.cpp  networking.cpp  networking.h  techno.h
android/Rainix/LC/: Logger.h  hooking.h  includes.h  main.cpp  main.h  patch.h
android/Rainix/LC/KittyMemory/: KittyMemory.cpp  KittyUtils.cpp  KittyUtils.h
android/include/cocos2dx/menu_nodes/: CCMenuItemSpriteExtra.h
android/include/cocos2dx/platform/: CCPlatformMacros.h
android/include/fmod/: fmod_common.h
include/: GameObjectController.hpp  MultiIntegerType.hpp
src/: GameObjectFactory.cpp  constants.h  hooks.cpp  main.cpp  networking.cpp  networking.h
